raz_update
