# routes/recipes.js
@@ -4,6 +4,17 @@ const recipes_utils = require("./utils/recipes_utils");
 
 router.get("/", (req, res) => res.send("im here"));
 
+/**
+ * This path returns main page 
+ */
+router.get("/main", async (req, res, next) => {
+  try {
+    const random_recipes = await recipes_utils.getRandomRecipes();
+    res.send(random_recipes);
+  } catch (error) {
+    next(error);
+  }
+});
 
 /**
  * This path returns a full details of a recipe by its id
